*Empty MediaWiki Message*

--- a/New_Mexico.mw
+++ b/New_Mexico.mw
@@ -9,7 +9,7 @@
  Motto = Crescit eundo (It grows as it goes) | 
  Capital = [[Santa Fe, New Mexico|Santa Fe]] | 
  LargestCity = [[Albuquerque, New Mexico|Albuquerque]] | 
- Governor = [[Bill Richardson (politician)|Bill Richardson]] (D) | 
+ Governor = [[Susana Martínez]] (R) | 
  Senators = [[Pete Domenici]] (R) <br /> [[Jeff Bingaman]] (D) |
  PostalAbbreviation = NM | 
  OfficialLang = None; [[English language|English]] and<br /> [[Spanish language|Spanish]] ''de facto'' |
