--- a/Bapu_Reyna.mw
+++ b/Bapu_Reyna.mw
@@ -1,3 +1,4 @@
+[[File:Raphael Madonna dell Granduca.jpg|thumb|right|[[Madonna (arti)|Madonna]] nang [[Raphael]]]]
 ===Baryanting Filipino===
 Bapu Reyna, Indung Mamakalulu Biye ampong yumu, mangapanaligan mi<br>
 Bapu Reyna, ikang awsan mi Ikeng pepalakuwan ay anak nang Eba;<br>
