*Empty MediaWiki Message*

--- a/Porac.mw
+++ b/Porac.mw
@@ -13,14 +13,14 @@
 | 2030 = 		
 |}}
 
-Ing '''Porac''' pangadua yang klasing [[balen]] ning [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang papulasyun a 80,757 a katau ka reng 15,686 a pamimalemale.
+Ing '''Porac''' pangadua yang klasing [[balen]] ning [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 80,757 a katau kareng 15,686 a pamimale-male.
 
 == Barangay ==
 
 Ing Porac atin yang 29 [[barangay]].
 <table border=0><tr>
 <td valign=top>
-* Babo Pangulo
+* Babo Pangulu
 * Babo Sacan
 * Balubad
 * Calzadang Bayu
