--- a/Amánung_Máori.mw
+++ b/Amánung_Máori.mw
@@ -1,3 +1,5 @@
 Ing '''Amanung Māori''' metung yang [[Deng Amanung Austronesiu|amanung Awstronesyu]].
 
 {{stub}}
+
+[[Category:Deng amanung Awstronesyu]]
