*Empty MediaWiki Message*

--- a/Amanung_Sardu.mw
+++ b/Amanung_Sardu.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Sardu''' (''Sardu'', ''limba sarda, lingua sarda'') metung ya kareng amanu king [[Italy|Italya]].
+Ing '''Amanung Sardu''' (''Sardu'', ''limba sarda, lingua sarda'') metung ya kareng pamyalita king [[Italy|Italya]].
 
 {{Suli}}
 
