--- a/Template:Stub.mw
+++ b/Template:Stub.mw
@@ -1,2 +1,1 @@
-<div class="notice stub" style="white-space: nowrap;">[[Image:Wiki letter w.svg|48px| ]] ''Kailangan yang [[:en:Wikipedia:The perfect stub article|pasantingan ampong dagdagan]] ining [[Wikipedia:Suli|suli]]. Makasaup ka king Wikipedia kapamilatan ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag kaniti].''</div><noinclude>
-</noinclude>
+#REDIRECT [[Template:Suli]]
