*Empty MediaWiki Message*

--- a/Choi_Siwon.mw
+++ b/Choi_Siwon.mw
@@ -6,7 +6,7 @@ I '''Choi Shi-won''' ([[:tl:Wikang Koreano|Koreanu]]: 최시원, [[:en:Hanja|Han
 * {{twitter|siwon407}}
 * [http://weibo.com/choisiwonkr Choi Siwon] king [[Weibo]]
 
-{{stub}}
+{{Suli}}
 
 [[Category:Deng artista king Mauling Korea]]
 [[Category:Deng Koreanu]]
