*Empty MediaWiki Message*

--- a/Wikipedia:Kapampangan.mw
+++ b/Wikipedia:Kapampangan.mw
@@ -7,6 +7,12 @@
 ==ES: Español==
 '''¿No habla pampango?''' El pampango o pampangueño es un idioma austronesio hablado en Pampanga, al sur de Tarlac y al norte de Bataan.
 
+==GL: Galego==
+'''Vostede non fala pampango?''' O pampango é un idioma austronesio falado na Pampanga, na metade meridional da provincia de Tarlac e na parte setentrional da provincia de Bataan.
+
+==PT: Português==
+'''Você não fala pampango?''' O pampango é um idioma austronesio falado na Pampanga, na metade meridional da província de Tarlac e na metade setentrional da província de Bataan.
+
 ==TL: Tagalog (FIL: Filipino)==
 '''Hindi ka nakakapag-salita ng Kapampangan?''' Ang Kapampangan ay isang wikang Awstronesyo na ginagamit sa Pampanga, sa katimugang bahagi ng Tarlac at sa hilagang bahagi ng Bataan.
 
