Replacing Spratly_&_Paracel_Islands.gif with [[File:Spratly_&_Paracel_Islands.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: Replacing GIF by exact PNG duplicate.).

--- a/Sansha.mw
+++ b/Sansha.mw
@@ -16,7 +16,7 @@
 |shield_size = 
 |image_blank_emblem = 
 |blank_emblem_size = 
-|image_map = Spratly & Paracel Islands.gif
+|image_map = Spratly & Paracel Islands.png
 |mapsize = 
 |map_caption = 
 |image_map1 = 
