*Empty MediaWiki Message*

--- a/Tukud_banwa_(Ophiogossaceae).mw
+++ b/Tukud_banwa_(Ophiogossaceae).mw
@@ -14,7 +14,7 @@
 | binomial_authority = ([[Carl Linnaeus|L.]]) [[Hook.]]
 }}
 
-Ing ''tukud banwa'' (''Helminthostachys zeylanica'') metung yang tanaman king gabun a [[yerba]], ampong lupang  [[pakû]] king [[mauli]] [[aslagan]]g [[Asia]] ampong [[Australia]]. Anti kareng aliwang kayabe king kayang familia, atin yang kumpul-kumpul a [[sporangium]] kareng tangke da reng bulung a anting mala-ngungut.   
+Ing '''tukud banwa''' (''Helminthostachys zeylanica'') metung yang tanaman king gabun a [[yerba]], ampong lupang  [[pakû]] king [[mauli]] [[aslagan]]g [[Asia]] ampong [[Australia]]. Anti kareng aliwang kayabe king kayang familia, atin yang kumpul-kumpul a [[sporangium]] kareng tangke da reng bulung a anting mala-ngungut.   
 
 Gagapang ya king lalam gabun ing kayang [[rhizome]] na niting tanaman a banuahan, at mataba ya. Malyari yang mika metung a bulung a malangungut (frond) o mapilan kareti. Katabas lang tandus (''lanceolate'') a gilit-gilitan deng kayang bulung, laganas o kareng pilang dake. 
 
