*Empty MediaWiki Message*

--- a/Nagorno-Karabakh.mw
+++ b/Nagorno-Karabakh.mw
@@ -87,8 +87,8 @@
 <!--Interwikis-->
 
 }}
-[[File:Stepanakert Fountain During the Day.JPG|thumb|left|200px|Abkhazia]]
+[[File:Stepanakert Fountain During the Day.JPG|thumb|left|200px|Karabakh (Artsakh)]]
 [[File:Nagorno-Karabakh Republic (orthographic projection).svg|thumb|left|200px]]
-
+[[File:Murov mountain in Azerbaijan-Caucasus3.jpg|thumb|left|200px]]
 [[Category:Nagorno-Karabakh| ]]
 [[Category:Caucasus]]
