Removing "CBA_Tigers.png", it has been deleted from Commons by [[commons:User:Hedwig in Washington|Hedwig in Washington]] because: Copyright violation, see [[:c:Commons:Licensing|]] above TOO.

--- a/Tarlac_State_University.mw
+++ b/Tarlac_State_University.mw
@@ -22,7 +22,7 @@
 | postgrad       = MA.ED, MAN, MBA, MPA, MSIT
 | doctoral       = Ed.D, DPA
 | colors         = [[Image:Tarlac State University Color Logo.png|15px|border]]  [[Maroon]] ampong [[Dilo]]
-| nickname       = [[Image:CBA Tigers.png|30px]] CBA Green Tigers<br>[[Image:CCS Red Hawks2.png|30px]] CCS Red Hawks<br>
+| nickname       =CBA Green Tigers<br>[[Image:CCS Red Hawks2.png|30px]] CCS Red Hawks<br>
                    [[Image:Beagle.png|30px]] LS Blue Eagles
 | affiliations   = Accrediting Agency of Chartered Colleges and Universities in the Philippines,<br>Asia-Pacific Qualifying Network,<br>Association of Universities of Asia and the Pacific,<br>Asia University Federation,<br>
                    International Association of Universities<br>
