Removing "Beagle.png", it has been deleted from Commons by [[commons:User:Hedwig in Washington|Hedwig in Washington]] because: Copyright violation, see [[:c:Commons:Licensing|]] above TOO.

--- a/Tarlac_State_University.mw
+++ b/Tarlac_State_University.mw
@@ -23,7 +23,7 @@
 | doctoral       = Ed.D, DPA
 | colors         = [[Image:Tarlac State University Color Logo.png|15px|border]]  [[Maroon]] ampong [[Dilo]]
 | nickname       =CBA Green Tigers<br>CCS Red Hawks<br>
-                   [[Image:Beagle.png|30px]] LS Blue Eagles
+LS Blue Eagles
 | affiliations   = Accrediting Agency of Chartered Colleges and Universities in the Philippines,<br>Asia-Pacific Qualifying Network,<br>Association of Universities of Asia and the Pacific,<br>Asia University Federation,<br>
                    International Association of Universities<br>
 | website        = [http://www.tsu.edu.ph/ Tarlac State University Official Website]<br>[http://www.tsu-cc.net/ Tarlac State University Hong Kong Campus]<br>[http://www.tsu.edu.ph/intl/index.asp International Affairs]<br>[http://www.tsu.edu.ph/4iec/ International Conference Education]
