--- a/Amanung_Dusun.mw
+++ b/Amanung_Dusun.mw
@@ -46,8 +46,8 @@ Ing '''Amanung Dusun''', o '''Bunduliwan''', metung ya kareng pamyalita king [[B
 |adwang pulu
 |duo no hopod
 |-
-|three thousand two hundred and eighty nine (3289)
-|atlung libung adwang dinalan walung pulu't siyam
+|atlung libung adwang dinalan walung pulu't siyam (3289)
+|tolu ribu duo ratus om walu ngodop om siam
 |}
 
 ===Deng Bulan ampon Aldo===
