--- a/Amánung_Armeniu.mw
+++ b/Amánung_Armeniu.mw
@@ -1,4 +1,3 @@
-{{Language with name|hy|Armenian|{{{1}}}}}<noinclude>
-{{PP-template|small=yes}}
-[[Category:Multilingual support templates|Lang-hy]]
-</noinclude>
+Ing '''Amanung Armenyu''' (հայերէն/հայերեն, ''hayeren'') metung yang pamyalita king [[Armenia|Armenya]].
+
+{{Suli}}
