*Empty MediaWiki Message*

--- a/Amanung_Asturyanu.mw
+++ b/Amanung_Asturyanu.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Asturianu''' (''asturianu, bable'') metung ya kareng pamyalita king [[Espanya]].
+Ing '''Amanung Asturyanu''' (''asturianu, bable'') metung ya kareng pamyalita king [[Espanya]].
 
 {{Suli}}
 
