*Empty MediaWiki Message*

--- a/Template:Suli.mw
+++ b/Template:Suli.mw
@@ -1,3 +1,3 @@
 {{-}}
-{{#if:{{{1|}}}|[[Filr:{{Stub/{{{1}}}}}|35px|{{{1}}}]]|[[Image:Wiki_letter_w.svg|35px|Usbong]]}}{{#if:{{{2|}}}|[[File:{{Stub/{{{2}}}}}|35px|{{{2}}}]]}}{{#if:{{{3|}}}|[[File:{{Stub/{{{3}}}}}|35px|{{{3}}}]]}} ''Ing artikulung ini {{#if:{{{1|}}}|a tungkol king '''{{{1}}}'''{{#if:{{{3|}}}|, '''{{{2}}}''' at '''{{{3}}}'''|{{#if:{{{2|}}}|&nbsp;at '''{{{2}}}'''}}}}}} metung yang [[Wikipedia:Suli|suli]]. Makasaup ka king [[Wikipedia]] kapamilatan ning [http://pam.wikipedia.org/w/index.php?title={{FULLPAGENAMEE}}&action=edit pamandagdag] kaniti.''{{#if:{{{1|}}}|[[Category:Stub ({{Stub/{{{1}}}|category}})]]|[[Category:Stub]]}}{{#if:{{{2|}}}|[[Category:Stub ({{Stub/{{{2}}}|category}})]]}}{{#if:{{{3|}}}|[[Category:Stub ({{Stub/{{{3}}}|category}})]]}}<noinclude>
+{{#if:{{{1|}}}|[[Filr:{{Stub/{{{1}}}}}|35px|{{{1}}}]]|[[Image:Wiki_letter_w.svg|35px|Usbong]]}}{{#if:{{{2|}}}|[[File:{{Stub/{{{2}}}}}|35px|{{{2}}}]]}}{{#if:{{{3|}}}|[[File:{{Stub/{{{3}}}}}|35px|{{{3}}}]]}} ''Ing artikulung ini {{#if:{{{1|}}}|a tungkol king '''{{{1}}}'''{{#if:{{{3|}}}|, '''{{{2}}}''' at '''{{{3}}}'''|{{#if:{{{2|}}}|&nbsp;at '''{{{2}}}'''}}}}}} metung yang [[Wikipedia:Suli|suli]]. Makasaup ka king [[Wikipedia]] kapamilatan ning [http://pam.wikipedia.org/w/index.php?title={{FULLPAGENAMEE}}&action=edit pamandagdag] kaniti.''{{#if:{{{1|}}}|[[Category:Suli ({{Stub/{{{1}}}|category}})]]|[[Category:Suli]]}}{{#if:{{{2|}}}|[[Category:Suli ({{Stub/{{{2}}}|category}})]]}}{{#if:{{{3|}}}|[[Category:Suli ({{Stub/{{{3}}}|category}})]]}}<noinclude>
 <includeonly>[[Category:Suli]]</includeonly>
