*Empty MediaWiki Message*

--- a/Amanung_Katalan.mw
+++ b/Amanung_Katalan.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Katalan''' (''català'') metung ya kareng pamyalita king [[Espanya]].
+Ing '''Amanung Katalán''' (''català'') metung ya kareng pamyalita king [[Espanya]].
 
 {{Suli}}
 
