--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -39,7 +39,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 ==Deng Sanga (Chapters)/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
 *KKPK Team Centro ([[San_Fernando,_Pampanga|City of San Fernando]], [[Mexico]], [[Arayat, Pampanga|Arayat]], [[Minalin, Pampanga|Minalin]], [[Bacolor, Pampanga|Bacolor]], & [[Santo_Tomas,_Pampanga|Santo Tomas]])
-*KKPK Team [[Floridablanca, Pampanga|Florida]]
+*KKPK Team [[Floridablanca, Pampanga|Floridablanca]]
 *KKPK Team [[Lubao, Pampanga|Lubao]]
 *KKPK Team SPG ([[Santa_Rita,_Pampanga|Sta Rita]], [[Porac,_Pampanga|Porac]] & [[Guagua,_Pampanga|Guagua]])
 *KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])<ref>[http://kkpkintl.zyro.com/KKPK-ChaptersSub-groups/ KKPK Chapters/Sub-group]</ref>
