*Empty MediaWiki Message*

--- a/Petr_Nečas.mw
+++ b/Petr_Nečas.mw
@@ -1,12 +1,12 @@
 {{Infobox officeholder
 |name           = Petr Nečas
-|image          = Praha,_Malá_Strana,_Kampa,_Petr_Nečas_3_(cropped).JPG
-|office         = [[List of Prime Ministers of the Czech Republic|Prime Minister of the Czech Republic]]
+|image          = Petr Nečas - O2067168633.jpg
+|office         = [[Prime Minister of the Czech Republic]]
 |president      = [[Václav Klaus]]<br>[[Miloš Zeman]]
 |term_start     = 28 Junio 2010
 |term_end       =
 |predecessor    = [[Jan Fischer (pulitiku)|Jan Fischer]]
-|successor      = To be decided 
+|successor      = [[Jiří Rusnok]] 
 |office1        = [[Ministry of Defence (Czech Republic)|Minister of Defence]]
 |term_start1    = 21 Diciembre 2012
 |term_end1      = 19 Marzo 2013
