--- a/Putrajaya.mw
+++ b/Putrajaya.mw
@@ -8,12 +8,12 @@
 |image_skyline = View on Perdana Putra.JPG
 |image_flag = Flag of Putrajaya.svg
 |image_seal = Seal of Putrajaya.svg
-|image_map = Putrajaya in Malaysia.svg
+|image_map = KL + Putrajaya locator.png
 |latd = 
 |longd = 
 |coordinates_type =
 |coordinates_display = 
-|map_caption = <center>{{Legend inline|#C41E3A|outline=silver}} '''Putrajaya''' in {{Legend inline|#FDF9D2|outline=silver}} '''[[Malaysia]]'''</center>
+|map_caption = Putrajaya in [[Malaysia]]
 |coordinates_region  = MY
 |subdivision_type  = Bangsa
 |subdivision_type1 = [[States of Malaysia|Estadu]]
