For information only

--- a/Joel_Pabustan_Mallari.mw
+++ b/Joel_Pabustan_Mallari.mw
@@ -1,4 +1,4 @@
-I '''Joel Pabustan Mallari''' metung yang [[Kapampangan]] [[watas]] at [[talasulat]].
+I '''Joel Pabustan Mallari''' metung yang [[Kapampangan]] [[watas]] at [[talasulat]]. Sabe sabe tamu pung purihan ing kapangpangan Teacher keng Lara Integrated School at Among Top 20 Best Artist in the Philippines
 
 ===Talambie===
 
