*Empty MediaWiki Message*

--- a/Amanung_Sardu.mw
+++ b/Amanung_Sardu.mw
@@ -2,4 +2,4 @@ Ing '''Amanung Sardu''' (''Sardu'', ''limba sarda, lingua sarda'') metung ya kar
 
 {{Suli}}
 
-[[Category:Deng amanung romanse]]
+[[Category:Deng amanung Romanse]]
