*Empty MediaWiki Message*

--- a/Amanung_Pyamontes.mw
+++ b/Amanung_Pyamontes.mw
@@ -2,4 +2,4 @@ Ing '''Amanung Pyamontes''' o '''Pyemontes''' (''Piemontèis'', [[Amanung Italya
 
 {{Suli}}
 
-[[Category:Deng amanung romanse]]
+[[Category:Deng amanung Romanse]]
