*Empty MediaWiki Message*

--- a/Toskana.mw
+++ b/Toskana.mw
@@ -1,7 +1,7 @@
 {{Otheruses}}
 {{Infobox Region of Italy |
   name              = Toscana|
-  fullname          = Labuad Toscana |
+  fullname          = Labuad Toskana |
   isocode           = &nbsp; |
   capital           = [[Florence]] |
   governor          = Claudio Martini <br />(''[[Democrats of the Left|DS]]''-''[[The Union (political coalition)|Union]]'') |
@@ -20,7 +20,7 @@
   map               = [[File:Italy Regions Tuscany Map.png]] |
 }} 
 
-Ing Tuscany makadake ya kareng apulung lalawigan:
+Ing '''Toskana''' (''Toscana''; ''Tuscany'' king [[Amanung Ingles|Ingles]]) makadake ya kareng apulung lalawigan:
 
 [[File: Provinces of Tuscany map.png|350px]]
 * [[Province of Arezzo|Arezzo]]
