*Empty MediaWiki Message*

--- a/Italya.mw
+++ b/Italya.mw
@@ -54,7 +54,7 @@
 <sup>2</sup> Prior to 2002: [[Italian lira|Italian Lira]].</small> 
 }}
 
-Ing '''Italia''', peka-opisyal nang lagyu ing '''Republika Italia''' keng amunung [[English]], '''Italian Republic''' ([[Italian language|Italian]]: ''Italia'', [[International Phonetic Alphabet|IPA]]: {{IPA|[i'ta:lja]}} o kaya ''Republica Italiana'', [[International Phonetic Alphabet|IPA]]: {{IPA|[re'pubblika ita'lja:na]}}), metung yang bangsa keng [[Mauling Europa]], atiu king albugang banda ning continenting Europa. Deng bubuu keng Italia ilapin deng [[Italian peninsula]], ing saug [[Ilug Po]], at ding aduang maragul a pulu king [[Dayat malat ning Mediterranean]], [[Sicily]] at [[Sardinia]], at sososyu ne ing kayang pangulung sepung [[alps|alpine]] keng [[France]], [[Switzerland]], [[Austria]], at [[Slovenia]]. Ing bangsa maksosyu ya naman ing sepu nang dayat malat keng [[Croatia]], at France. Deng timawang bangsa ning  [[San Marino]] at ing [[Syudad Vatican]]  [[enclave]] nala  at atiu keng territoryu ning Italia. Maka-ugis lang botas (boot) at ini ing sangkan inya ausan deng ''lo stivale'' ("botas" keng Italianu).  
+Ing '''Italya''', peka-opisyal nang lagyu ing '''Republika Italia''' keng amunung [[English]], '''Italian Republic''' ([[Italian language|Italian]]: ''Italia'', [[International Phonetic Alphabet|IPA]]: {{IPA|[i'ta:lja]}} o kaya ''Republica Italiana'', [[International Phonetic Alphabet|IPA]]: {{IPA|[re'pubblika ita'lja:na]}}), metung yang bangsa keng [[Mauling Europa]], atiu king albugang banda ning continenting Europa. Deng bubuu keng Italia ilapin deng [[Italian peninsula]], ing saug [[Ilug Po]], at ding aduang maragul a pulu king [[Dayat malat ning Mediterranean]], [[Sicily]] at [[Sardinia]], at sososyu ne ing kayang pangulung sepung [[alps|alpine]] keng [[France]], [[Switzerland]], [[Austria]], at [[Slovenia]]. Ing bangsa maksosyu ya naman ing sepu nang dayat malat keng [[Croatia]], at France. Deng timawang bangsa ning  [[San Marino]] at ing [[Syudad Vatican]]  [[enclave]] nala  at atiu keng territoryu ning Italia. Maka-ugis lang botas (boot) at ini ing sangkan inya ausan deng ''lo stivale'' ("botas" keng Italianu).  
 
 King maiggit 3,000ng banua ing Italy denasan na ding dakal pamanyatang da reng dayu para manuknangan karin at deng pamanyakup karela ding taung  [[Germanic peoples|Germanic]], [[Celt]]ic, [[Frankish]], [[Byzantine Empire|Byzantine Greek]], [[Saracen]], [[Normans|Norman]], at ding  French [[Angevin]], at [[Lombard]]. Ing Italy iya mu ring balayan da ring bantug a mapanuking sibilisayun abe no ring [[Etruscans]], [[Greeks]] at ding [[ancient Rome|Romans]]. Manibat inyang pepalakwan do ring ukbung Alemaninyang katataulian ning  [[WWII]], ing Italy asalese ne ing kayang pangalualu karas king kayang sepu.
 
