*Empty MediaWiki Message*

--- a/Italya.mw
+++ b/Italya.mw
@@ -1,6 +1,6 @@
 {{Infobox_Country
 |native_name = ''Repubblica Italiana''
-|conventional_long_name = Italian Republic
+|conventional_long_name = Republika Italyana<br>Republikang Italyanu
 |common_name = Italy 
 |image_flag = Flag of Italy.svg
 |image_coat =Italy-Emblem.svg
