*Empty MediaWiki Message*

--- a/Plorensya.mw
+++ b/Plorensya.mw
@@ -3,8 +3,8 @@
 |color             = purple
 |city              = Comune di Firenze
 |img_coa           = 
-|name              = Florence
-|region            = [[Tuscany]]
+|name              = Plorensya (Firenze)
+|region            = [[Toskanya]]
 |province          = [[Province of Florence|Florence]] (FI)
 |altitude          = 50
 |area_cityproper   = 102
@@ -24,6 +24,8 @@
 |mayor             = [[Leonardo Domenici]] ([[Democrats of the Left]])
 |website           = [http://www.comune.firenze.it/ www.comune.firenze.it]
 }}
+
+Ing '''Plorensya''' (''Firenze'' king [[Amanung Italyanu|Italyanu]], ''Florence'' king [[Amanung Ingles|Ingles]], ''Florencia'' king [[Espanyol (amanu)|Espanyol]]), metung ya kareng lakanbalen king [[Italya]].
 
 {{Infobox World Heritage Site
 | Name        = Historic Centre of Florence
