*Empty MediaWiki Message*

--- a/Nevada.mw
+++ b/Nevada.mw
@@ -9,7 +9,7 @@
  Nickname = Silver State, Sagebrush State,<br /> Battle Born State (official) |
  Capital = [[Carson City, Nevada|Carson City]] |
  LargestCity = [[Las Vegas, Nevada|Las Vegas]] |
- Governor = [[Kenny Guinn]] (R)|
+ Governor = [[Brian Sandoval]] (R)|
  Senators = [[Harry Reid]] (D)<br />[[John Ensign]] (R) |
  PostalAbbreviation = NV |
  OfficialLang = None |
