*Empty MediaWiki Message*

--- a/Yoon_Eun-hye.mw
+++ b/Yoon_Eun-hye.mw
@@ -1,7 +1,7 @@
 {{Korean name|Yoon}}
 {{Infobox person
 | name           = Yoon Eun-hye
-| image          = 
+| image          = Yoon Eun-Hye (2).jpg
 | image_caption  = '''Yoon Eun Hye'''
 | birth_date     = {{Birth date and age|1984|10|3}}
 | birth_place    = [[Seoul]], [[South Korea]]
