--- a/Tan_Son_Nhat_International_Airport.mw
+++ b/Tan_Son_Nhat_International_Airport.mw
@@ -28,6 +28,7 @@ Deng tutuking airlines a susuyu keng Tan Son Nhat Airport (agpang Eneru 2010):
 |[[Lufthansa]]|Bangkok-Suvarnabhumi, Frankfurt | 2
 |[[Malaysia Airlines]]|Kuala Lumpur | 2
 |[[Mandarin Airlines]]|Taichung | 2
+|[[Nok Air]]|Bangkok-Don Mueang | 2
 |[[Philippine Airlines]]|Manila | 2
 |[[Qatar Airways]]|Doha | 2
 |[[Royal Brunei Airlines]]|Bandar Seri Begawan | 2
@@ -64,6 +65,7 @@ Deng tutuking airlines a susuyu keng Tan Son Nhat Airport (agpang Eneru 2010):
 |[[Trai Thien Air Cargo]]|Bangkok, Hanoi, Phnom Penh, Singapore
 |[[Tri-MG Intra Asia Airlines]]|Bangkok, Phnom Penh
 }}
+
 == Note ==
 <references/>
 
