([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Creuse.jpg]] → [[File:Creuse river, France.jpg]] [[c:COM:FR#reasons|File renaming criterion #2]]: Änderung komplett bedeutungsloser oder zweideutiger Namen in sinnvolle, die beschreiben, was auf dem Bi...

--- a/Creuse.mw
+++ b/Creuse.mw
@@ -17,7 +17,7 @@ Ing ''Creuse'' metung ya kareng mumunang 83 departamentung melalang inyang [[Fre
 
 
 <gallery>
-Image:Creuse.jpg|Creuse Landscape
+Image:Creuse river, France.jpg|Creuse Landscape
 </gallery>
 
 ==Lawen ya rin==
