--- a/Turkiya.mw
+++ b/Turkiya.mw
@@ -6,7 +6,7 @@ common_name = Turkey|
 national_motto = [[Turkish language|Turkish]]: ''Yurtta Sulh, Cihanda Sulh''<br />([[English language|English]]: "Peace at Home, Peace in the World")|
 national_anthem = ''[[İstiklâl Marşı]]''|
 image_flag = Flag of Turkey.svg|
-image_coat = Türkiye arması.svg|
+image_coat = Coat of Arms of Turkey.svg|
 symbol_type=Coat of arms|
 image_map = LocationTurkey.png|
 capital = [[Ankara]]|latd=52|latm=31|latNS=N|longd=13|longm=24|longEW=E|
