/* External links */ Website Louisg.net has disappeared and is now parked. Pages have been made available again on iCalendrier.fr, so they won't be lost.

--- a/Coligny.mw
+++ b/Coligny.mw
@@ -19,7 +19,7 @@ Ing '''Coligny''' metung yang [[commune in France|commune]] king [[France|French
 
 ==Suglung Palwal==
 *[http://www.mairie-coligny.fr/ Official site]
-*[http://www.louisg.net/C_gaulois.htm The almanac of Coligny]
+*[http://icalendrier.fr/calendriers-saga/calendriers/gaulois The almanac of Coligny]
 
 {{RhoneAlpes-geo-stub}}
 
