Removing "Daqing_panorama_01.jpg", it has been deleted from Commons by [[commons:User:Natuur12|Natuur12]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Lzy881114|]].

--- a/Daqing.mw
+++ b/Daqing.mw
@@ -6,7 +6,7 @@
 |official_name          = {{lang|zh-cn|大庆市}}
 |nickname               = 
 |motto                  = 
-|image_skyline          = Daqing panorama 01.jpg
+|image_skyline          =
 |imagesize              = 
 |image_caption          = Ing Wanda Plaza, Daqing
 |image_flag             = 
