Removing "Yichun_Heilongjiang18.jpg", it has been deleted from Commons by [[commons:User:Natuur12|Natuur12]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Lzy881114|]].

--- a/Yichun,_Heilongjiang.mw
+++ b/Yichun,_Heilongjiang.mw
@@ -9,7 +9,7 @@
 |native_name            = {{lower|0.1em|{{nobold|{{lang|zh|伊春}}}}}}
 |nickname               = Forest capital ({{lang|zh|林都}})
 |motto                  = 
-|image_skyline          = Yichun Heilongjiang18.jpg
+|image_skyline          =
 |imagesize              = 
 |image_caption          = Ing komunidad da reng residenti king Yichun, Heilongjiang.
 |image_flag             = 
