--- a/Jiamusi.mw
+++ b/Jiamusi.mw
@@ -8,7 +8,7 @@
 |nickname               =
 |official_name          = {{longitem|style=font-size:110%;|{{nobold|{{lang|zh-cn|佳木斯市}}}}}}
 |motto                  =
-|image_skyline          = JiamusiCity.jpg 
+|image_skyline          =
 |imagesize              = 
 |image_caption          =
 |image_flag             =
