--- a/Suihua.mw
+++ b/Suihua.mw
@@ -8,7 +8,7 @@
 |official_name          = {{longitem|style=font-size:110%;|{{nobold|{{lang|zh-cn|绥化市}}}}}}
 |nickname               =
 |motto                  =
-|image_skyline          = Suihuashi.jpg
+|image_skyline          =
 |imagesize              =
 |image_caption          =
 |image_flag             =
