Removing "Shuangyashan.jpg", it has been deleted from Commons by [[commons:User:Natuur12|Natuur12]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Lzy881114|]].

--- a/Shuangyashan.mw
+++ b/Shuangyashan.mw
@@ -5,7 +5,7 @@
 |native_name = {{lang|zh|双鸭山}}
 |nickname =
 |motto =
-|image_skyline = Shuangyashan.jpg
+|image_skyline =
 |imagesize =
 |image_caption = Ing sentru ning lakanbalen ning Shuangyashan 
 |image_flag =
