default Windows fonts

--- a/Template:Coptic.mw
+++ b/Template:Coptic.mw
@@ -1,4 +1,4 @@
-<span lang="cop-Copt" xml:lang="cop-Copt" style="font-size:110%;font-family:'New Athena Unicode', 'MPH 2B Damase', 'Arial Coptic', 'Quivira', 'Analecta';">{{{1}}}</span><noinclude>
+<span lang="cop-Copt" xml:lang="cop-Copt" style="font-size:110%;font-family:'Segoe UI Historic', 'Segoe UI Symbol', 'New Athena Unicode', 'MPH 2B Damase', 'Arial Coptic', 'Quivira', 'Analecta';">{{{1}}}</span><noinclude>
 
 Template is intended to force [[Coptic alphabet]] fonts if installed.
 *[http://socrates.berkeley.edu/~pinax/greekkeys/NAUdownload.html New Athena Unicode]
