Removing "106th_Tarlac_State_University_Anniversity.png", it has been deleted from Commons by [[commons:User:Wdwd|Wdwd]] because: Per [[:c:Commons:Deletion requests/Files in Category:Tarlac State University|]].

--- a/Tarlac_State_University.mw
+++ b/Tarlac_State_University.mw
@@ -28,7 +28,7 @@ LS Blue Eagles
                    International Association of Universities<br>
 | website        = [http://www.tsu.edu.ph/ Tarlac State University Official Website]<br>[http://www.tsu-cc.net/ Tarlac State University Hong Kong Campus]<br>[http://www.tsu.edu.ph/intl/index.asp International Affairs]<br>[http://www.tsu.edu.ph/4iec/ International Conference Education]
 |footnotes       = 106th Anniversary Tarlac State University
-|logo            = [[File:106th Tarlac State University Anniversity.png|center|180px|106th Tarlac State University - Anniversity Foundation Day]][[File:Tarlac State University SVG.png|250px|The Logo Banner of Tarlac State University]]
+|logo            =[[File:Tarlac State University SVG.png|250px|The Logo Banner of Tarlac State University]]
 }}
 
 Mitátag ya kanitang 1906 ing '''Tarlac State University''' (TSU), ing sentru ning kabyasnang akademiku king lalawigan ning [[Tarlac]] king [[Filipinas]]. Miyayampang yang kursung gradwadu kareng dakal a sanga ning belwan bukud kareng kursu o programang vocational, undergraduate degree ampong postgraduate programs king ''Engineering'', ''Chemistry'', ''Human Kinetics'' and ''Social Sciences'', ''Computer Studies'' ampong ''Information Technology'', ''Business and Accountancy'', ''Education'', ''Public Administration'', ''Architecture and Fine Arts'', ''Secondary'' ampong ''Nursing''. Bayu-bayu pamu, biklat ne ning TSU ing kayang programa king Bachelor of Laws ''(LL.B)'' kasaup ne ing [[Integrated Bar of the Philippines]] Tarlac Chapter. Bukud kaniti, atin yang medical degree program para kareng magaral a internasyonal king kayang Lucinda Campus.
