Removing "Tsu_status.jpg", it has been deleted from Commons by [[commons:User:Wdwd|Wdwd]] because: Per [[:c:Commons:Deletion requests/Files in Category:Tarlac State University|]].

--- a/Tarlac_State_University.mw
+++ b/Tarlac_State_University.mw
@@ -39,7 +39,7 @@ Mitátag ya kanitang 1906 ing '''Tarlac State University''' (TSU), ing sentru ni
 |name   = TSU
 |title  = <font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:16pt">T<font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:13pt">ARLAC</font> <font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:16pt">S</font><font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:13pt">TATE</font> <font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:16pt">U</font><font style="color:yellow; font-family: Trajan Pro, Palatino Linotype; font-size:13pt">NIVERSITY</font>
 |state = {{{state|expanded}}}
-|image  = [[Image:Tsu status.jpg|135px|link=|Tarlac State University Status]] 
+|image  =
 |titlestyle = color: maroon; background-color: maroon; 
 |groupstyle = background: maroon;
 |oddstyle = background: white;
