([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Datura metel1SHSU.jpg]] → [[File:Datura inoxia1SHSU.jpg]]

--- a/Talampune.mw
+++ b/Talampune.mw
@@ -1,6 +1,6 @@
 {{taxobox
 |name = Talampune
-|image = Datura metel1SHSU.jpg
+|image = Datura inoxia1SHSU.jpg
 |image2 = DaturaMetel-plant.jpg
 |image2_caption = 'Fastuosa'
 |regnum = [[Plantae]]
