*Empty MediaWiki Message*

--- a/Bretanya.mw
+++ b/Bretanya.mw
@@ -21,6 +21,6 @@ cantons                  = 201 |
 communes                 = 1,268 |
 departments             = [[Côtes-d'Armor]]<br>[[Ille-et-Vilaine]]<br>[[Morbihan]]<br>[[Finistère]] |
 image_map                = Bretagne map.png |
-website = [http://www.bretagne.bzh bretagne.bzh]
+website = [http://www.bretagne.bzh bretagne.bzh] |
 footnotes=|
 }}
