*Empty MediaWiki Message*

--- a/Shenzhen.mw
+++ b/Shenzhen.mw
@@ -4,8 +4,8 @@
 |official_name                  = {{longitem|style=font-size:110%;|{{nobold|{{lang|zh-cn|深圳市}}}}}}
 |native_name                    = {{lower|0.1em|{{nobold|{{lang|zh|深圳}}}}}}
 |settlement_type                = [[Sub-provincial city in the People's Republic of China|Sub-provincial city]]
-|image_skyline                  =
-|image_caption                  = Clockwise from bottom: [[Shenzhen North Railway Station]], Deng Xiaoping Portrait Square in downtown area, [[Kingkey 100]] building, [[Shun Hing Square]], container hub at [[Port of Shenzhen]] in Pearl River area. 
+|image_skyline                  = 深圳2.JPG
+|image_caption                  = 
 |image_map                      = Guangdong subdivisions - Shenzhen.svg
 |map_caption                    = Location of Shenzhen City jurisdiction in Guangdong
 |pushpin_map                    = Tsina
