One picture in higher resolution and better colours

--- a/Baden-Württemberg.mw
+++ b/Baden-Württemberg.mw
@@ -108,7 +108,7 @@ Image:Altes Schloss Stuttgart.jpg|Matuang Castle king [[Stuttgart]]
 Image:Karlsruhe schloss gottesau.jpg|Castle king [[Karlsruhe]]
 Image:Schloss in Ludwigsburg.jpg|Castle king [[Ludwigsburg]]
 Image:Lichtenstein.jpg|[[Lichtenstein Castle]]
-Image:Castle Sigmaringen2.jpg|Castle [[Sigmaringen]]
+Image:Sigmaringen Schloss 2015-04-29 15-52-34.jpg|Castle [[Sigmaringen]]
 Image:DE BW Ulm-Muensterturm.jpg|[[Ulm Cathedral]]
 Image:Schloss Langenburg 260604.jpg|Castle [[Langenburg]]
 Image:Dom zu St. Blasien.jpg|[[Sankt Blasien]] Cathedral
