*Empty MediaWiki Message*

--- a/Syudad_ning_Tarlac.mw
+++ b/Syudad_ning_Tarlac.mw
@@ -1,17 +1,15 @@
-[[Image:Ph locator tarlac tarlac2.png]]
-
-<!--[[Image:Ph locator tarlac tarlac2.png|right|Mapa ning Tarlac papakit ne ing Siyudad ning Tarlac ]]-->
+[[Image:Ph locator tarlac tarlac2.png|right|200px|Mapa ning Tarlac papakit ne ing Siyudad ning Tarlac ]]
+[[File:Tarlac City 1.JPG|200px|thumbnail|right|Tarlac City]]
+[[File:Tarlac City 2.JPG|200px|thumbnail|right|MacArthur Highway]]
 Ing '''Syudad Tarlac''' pangatlu yang klasing siyudad king lalawigan ning [[Tarlac]], [[Filipinas]]. Iti ing syudad kapital ning [[Tarlac]]. Agpang keng [[2000]] sensus, atin yang papulasyun a 262,481 a katau ka reng 51,703 a pamimalemale.
 
 ==Barangay==
 
 Ing Siyudad Tarlac atin yang  76 [[barangay]].
 
-=='''Amlat o Kasalesayan'''==
+==Amlat o Kasalesayan==
 
-=='''Pamagsiasat'''==
-
-
+==Pamagsiasat==
 
 ==Suglung Palwal==
 
