*Empty MediaWiki Message*

--- a/Dikut-maria.mw
+++ b/Dikut-maria.mw
@@ -47,7 +47,7 @@
 |''Artemisia vulgaris'' <small>Burm.f. 1768 not L. 1753</small>
 |''Artemisia wallichiana'' <small>Besser</small>
 }}}}
-Ing '''dikut-maria'''(''Artemisia vulgaris''<ref name=BSBI07>{{cite web |title=BSBI List 2007 |publisher=Botanical Society of Britain and Ireland |url=http://www.bsbi.org.uk/BSBIList2007.xls |format=xls |archive-url=http://www.webcitation.org/6VqJ46atN |archive-date=2015-02-25 |accessdate=2014-10-17}}</ref>) metung ya kareng mapilang species king genus ''[[Artemisia (genus)|Artemisia]]''. Ausan deng '''felon herb, chrysanthemum weed, wild wormwood, old Uncle Henry, sailor's tobacco, naughty man, old man''' o '''St. John's plant'''  king Inglis.<ref>{{Cite web|title=Ohio Perennial and Biennial Weed Guide: Mugwort ''Artemisia vulgaris''|publisher=Ohio Agricultural Research and Development Center, Ohio State University|url=http://www.oardc.ohio-state.edu/weedguide/singlerecord.asp?id=1020|archiveurl=http://web.archive.org/web/20110519151041/http://www.oardc.ohio-state.edu/weedguide/singlerecord.asp?id=1020|archivedate=19 May 2011|deadurl=no}}</ref> Gagamitan dala anitmong tanaman a panulu ampo king pamaglutu.
+Ing '''dikut-maria'''(''Artemisia vulgaris''<ref name=BSBI07>{{cite web |title=BSBI List 2007 |publisher=Botanical Society of Britain and Ireland |url=http://www.bsbi.org.uk/BSBIList2007.xls |format=xls |archive-url=http://www.webcitation.org/6VqJ46atN |archive-date=2015-02-25 |accessdate=2014-10-17}}</ref>) metung ya kareng mapilang species king genus ''[[Artemisia (genus)|Artemisia]]''. Ausan deng '''felon herb, chrysanthemum weed, wild wormwood, old Uncle Henry, sailor's tobacco, naughty man, old man''' o '''St. John's plant'''  king Inglis.<ref>{{Cite web|title=Ohio Perennial and Biennial Weed Guide: Mugwort ''Artemisia vulgaris''|publisher=Ohio Agricultural Research and Development Center, Ohio State University|url=http://www.oardc.ohio-state.edu/weedguide/singlerecord.asp?id=1020|archiveurl=http://web.archive.org/web/20110519151041/http://www.oardc.ohio-state.edu/weedguide/singlerecord.asp?id=1020|archivedate=19 May 2011|deadurl=no}}</ref> Gagamitan de anitmong tanaman a panulu ampo king pamaglutu.
 ==Dalerayan==<!-- BiolConserv137:248. -->
 {{reflist}}
 
