Replacing Map-1477_Low_Countries.png with [[File:Map_Burgundian_Netherlands_1477-en.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #4]]: To harmonize

--- a/Belgika.mw
+++ b/Belgika.mw
@@ -63,7 +63,7 @@ Ing Belgium ikwa ne ing lagyu na ibat keng ''[[Belgae]]'', a aptas da reng kerak
 
 == Amlat ==
 {{main|History of Belgium}}
-[[File:Map-1477 Low Countries.png|thumb|left|200px|Ding [[Labingpitung Lalawigan]] (kule dalandan, kayumangggi ampong dilong lugal) ampong deng [[Bishopric ning Liège]] (aluntiang)]]
+[[File:Map Burgundian Netherlands 1477-en.png|thumb|left|200px|Ding [[Labingpitung Lalawigan]] (kule dalandan, kayumangggi ampong dilong lugal) ampong deng [[Bishopric ning Liège]] (aluntiang)]]
 
 [[File:Wappers belgian revolution.jpg|thumb|left|250px|''Ing Dangka ning Aklasan ning Belgium inyang 1830'' (1834)<br />neng [[Egide Charles Gustave Wappers]],<br />king Ancient Art Museum, Brussels.]]
 
