Removing "Guiyang-skyline-2.PNG", it has been deleted from Commons by [[commons:User:Yann|Yann]] because: Per [[:c:Commons:Deletion requests/Files from enwiki user Olemissius|]].

--- a/Guiyang.mw
+++ b/Guiyang.mw
@@ -9,7 +9,7 @@
 |total_type             = <!-- to set a non-standard label for total area and population rows -->
 |motto                  =
 <!-- images and maps  ----------->
-|image_skyline          =guiyang-skyline-2.PNG
+|image_skyline          =
 |imagesize              =
 |image_caption          =Bista ning Templung Hongfu ampo ing lugal da reng negosyu king Parkeng Baiyun 
 |image_flag             =
