*Empty MediaWiki Message*

--- a/Letonia.mw
+++ b/Letonia.mw
@@ -40,8 +40,8 @@
 |HDI_rank = 48th
 |HDI_year = 2003
 |HDI_category = <font color="#009900">high</font>
-|currency = [[Latvian lats|Lats]] (Ls)
-|currency_code = LVL
+|currency = [[Euro]]
+|currency_code = EUR
 |country_code = LVA
 |time_zone = [[Eastern European Time|EET]]
 |utc_offset = +2
