Replacing Flag_of_Free_France_1940-1944.svg with [[File:Flag_of_Free_France_(1940-1944).svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: standardizing).

--- a/Template:Country_data_France.mw
+++ b/Template:Country_data_France.mw
@@ -5,7 +5,7 @@
 | flag alias-modern = Flag of France (XIV-XVI).svg
 | flag alias-royal = Naval Ensign of the Kingdom of France.svg
 | flag alias-restauration = Pavillon royal de France.svg
-| flag alias-free = Flag of Free France 1940-1944.svg
+| flag alias-free = Flag of Free France (1940-1944).svg
 | flag alias-vichy = VichyFlag.svg
 | flag alias-naval = Civil and Naval Ensign of France.svg
 | link alias-naval = French Navy
