+Java location inkscape.svg

--- a/Java.mw
+++ b/Java.mw
@@ -1,6 +1,6 @@
 {{Indonesian islands
 | name          = Java
-| image         = [[File:JavaLocatie-1-.png|250px]]
+| image         = [[File:Java location inkscape.svg|250px]]
 | nickname      = 
 | locality      = [[Sunda Islands]]
 | population    = 124 million (2005 est.)
