*Empty MediaWiki Message*

--- a/Durun.mw
+++ b/Durun.mw
@@ -41,3 +41,5 @@ Deng '''durun''' (''grasshopper'' king Ingles), [[insectu]] la o ayup-ayupan iba
 
 [[Category:Grasshoppers| ]]
 [[Category:Insects as food]]
+
+[[bcl:lokton]]
