Replacing Department_of_state.svg with [[File:Seal_of_the_United_States_Department_of_State.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: specifing which country).

--- a/Template:USSecState.mw
+++ b/Template:USSecState.mw
@@ -1,7 +1,7 @@
 {{Navbox
 |name = USSecState
 |title = [[:en:United States Secretary of State|Kalihim ning Estado]] ning [[:en:United States|Estados Unidos]] 
-|image = [[Image:Department of state.svg|75px|right|alt=Seal of the US Department of State]]
+|image = [[Image:Seal of the United States Department of State.svg|75px|right|alt=Seal of the US Department of State]]
 |titlestyle = background:lightsteelblue;
 
 |list1 = 
