--- a/Kaferoían.mw
+++ b/Kaferoían.mw
@@ -15,7 +15,7 @@
 |leader_title1            = [[List of Danish monarchs|Monarch]]
 |leader_title2            = [[Prime Minister of the Faroe Islands|Prime Minister]]
 |leader_name1             = [[Margrethe II of Denmark|Margrethe II]]
-|leader_name2             = [[Jóannes Eidesgaard]]
+|leader_name2             = [[Aksel V. Johannesen]]
 |area_rank                = 180th
 |area_magnitude           = 1 E9
 |area                     = 1,399
