*Empty MediaWiki Message*

--- a/Amanung_Atayal.mw
+++ b/Amanung_Atayal.mw
@@ -1,4 +1,4 @@
-Ing Amanung Atayal (''Tayal'') metung ya kareng pamyalita king [[Taiwan]].
+Ing '''Amanung Atayal''' (''Tayal'') metung ya kareng pamyalita king [[Taiwan]].
 
 {{Suli}}
 
