*Empty MediaWiki Message*

--- a/Amanung_Seediq.mw
+++ b/Amanung_Seediq.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Seediq''' (''Kari Seediq'', ''Taroko'') metung ya kareng pamyalita king [[Taiwan]].
+Ing '''Amanung Seediq''' (''Kari Seediq'', ''Taroko'', ''Truku'') metung ya kareng pamyalita king [[Taiwan]].
 
 {{Suli}}
 
