*Empty MediaWiki Message*

--- a/Amanung_Pazeh.mw
+++ b/Amanung_Pazeh.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Pazeh''' (''Pazih'') metung ya kareng pamyalita king [[Taiwan]].
+Ing '''Amanung Pazeh''' (''Pazih''; ''Kulon'', ''Kulun'') metung ya kareng pamyalita king [[Taiwan]].
 
 {{Suli}}
 
