*Empty MediaWiki Message*

--- a/Quinoa.mw
+++ b/Quinoa.mw
@@ -13,6 +13,8 @@
 | binomial = ''Chenopodium quinoa''
 | binomial_authority = [[Carl Ludwig Willdenow|Willd.]]
 }}
+[[File:Chenopodium quinoa -red faro- MHNT.BOT.2007.43.66.jpg|thumb|''Chenopodium quinoa -red faro-'']]
+
 :''Para king balen a kawangis na lagiu niti, lon ya ing [[Quinua, Peru]]. Ing "Quinoa" pamagat ne murin ning 1992 music album ning [[Tangerine Dream]].''
 Ing '''Quinoa''' ({{pron-en|ˈkiːnoʊ.ə}} o {{IPAlink-en|kwɨˈnoʊ.ə}}, king Castila ''quinua,'' ibat king amanung [[Quechua]]ng ''kinwa),'' a metung a uri ning [[:en:goosefoot|goosefoot]] ''(Chenopodium),'' metung yang tanaman a keraklan tatanam da para kareng kayang butul a kakanan. Metung yang [[:en:pseudocereal|pseudocereal]] at e tutung [[:en:cereal|cereal]], o binutil, uling e ya metung a [[Poaceae|dikut]] iti. Uling metung yang chenopod, malapit nong kamaganak ning quinoa deng tanaman a beet, spinach ampong tumbleweed.  Kakanan la murin anting gule deng kayang bulung, anti ing [[:en:amaranth|amaranth]], pero malagad la mu king salukuyan deng pisasali rang bulung quinoa. 
 
